@@ -1,3 +1,8 @@
+Wed Apr 18 13:39:33 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* lmpar.c (compute_newton_direction): moved final rescaling inside
+ 	loop, as in the original lmpar.f
+
 Thu Mar  8 15:29:32 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* lmpar.c (compute_newton_direction): corrected bug that produced
